# Customer-Segmentation-Portfolio-Project

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
data/: customers.csv
docs/: DATA_DICTIONARY.md
reports/: analysis_summary.md
scripts/: generate_data.py
src/customer_segmentation/: __init__.py  data.py  modeling.py  predict.py  profiling.py  train.py
tests/: test_data.py  test_modeling.py
