[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "customer-segmentation"
version = "1.0.0"
description = "Compare clustering algorithms and turn customer groups into actionable business segments."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Naim Erteza" }]
dependencies = [
  "joblib==1.5.3",
  "numpy==2.3.5",
  "pandas==2.2.3",
  "scikit-learn==1.8.0",
  "streamlit==1.50.0",
]

[project.scripts]
segment-customers = "customer_segmentation.train:main"
predict-segment = "customer_segmentation.predict:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

